misaligned section heading due to the image, this should fix

--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -105,6 +105,7 @@ nav {
 ================================ */
 section {
     padding: 1.5em 1em;
+    clear: both;
 }
 
 h2 {
